Remove an incorrect DCHECK() when calling HostResolverImpl::Resolve() with an IP literal and HOST_RESOLVER_SYSTEM_ONLY flag.

The existing DCHECK() what a whitelist for all flags except this one and hence firing. Changing it to include HOST_RESOLVER_SYSTEM_ONLY would make it a trivial whitelist of everything so just remove the DCHECK all-together instead.

BUG=591706

Review URL: https://codereview.chromium.org/1768643002

Cr-Commit-Position: refs/heads/master@{#379372}

Former-commit-id: 368a1007f97c81c0d0a8e15a8affdcdd429dad5a